# banking-assistant-guardrails

./: .gitignore  Makefile  README.md  pyproject.toml
data/: accounts.md  company.md  credit_cards.md  interest_rates.md
src/: app.py  chatbot.py  log_setup.py  pipeline.py  rag.py
src/guards/: __init__.py  competitor.py  hallucination.py  pii.py  topic_filter.py
tests/: conftest.py  test_guards.py  test_pipeline.py
