[project]
name = "banking-assistant-guardrails"
version = "0.1.0"
description = "Bank customer service chatbot with integrated guardrails"
requires-python = ">=3.11,<3.13"
dependencies = [
    "openai>=1.40.0",
    "guardrails-ai @ git+https://github.com/guardrails-ai/guardrails.git@v0.5.3",
    "sentence-transformers>=3.0.1",
    "transformers>=4.41.2",
    "torch>=2.3.1",
    "presidio-analyzer>=2.2.354",
    "presidio-anonymizer>=2.2.354",
    "spacy>=3.7.5",
    "structlog>=24.0.0",
    "rich>=13.7.1",
    "python-dotenv>=1.0.1",
    "numpy>=1.26.4",
    "nltk>=3.8.1",
    "typer==0.9.4",
    "click==8.1.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
